--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 						<p>Верстка на HTML и CSS <br>Разработка сайтов под ключ</p>
 					</div>
 			</div>
-			<a class="main-down" href="#"><i class="icon-down"></i></a>
+			<a class="main-down slowly" href="#portfolio"><i class="icon-down""></i></a>
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
 			<div class="container">
 				<h2 class="section-header">Портфолио</h2>
 				<div class="row">
@@ -108,9 +108,27 @@
     		link.on('click', function(event) {
     			var work = $(this).attr('data-work');
     			var modal = $('.modal');
+    			console.log(work);
     			modal.find('.modal-body').load(work+'.html');
     		});
     	});
+    </script>
+    <script>
+			$(document).ready(function(){
+				$(".slowly").on("click", function (event) {
+					//отменяем стандартную обработку нажатия по ссылке
+					event.preventDefault();
+
+					//забираем идентификатор бока с атрибута href
+					var id  = $(this).attr('href'),
+
+					//узнаем высоту от начала страницы до блока на который ссылается якорь
+						top = $(id).offset().top;
+					
+					//анимируем переход на расстояние - top за 800 мс
+					$('body,html').animate({scrollTop: top}, 800);
+				});
+			});
     </script>
   </body>
 </html>
